--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongo-express": "^1.0.0-alpha.4",
+    "mongoose": "^6.1.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
-
 }
